--- a/static/home.html
+++ b/static/home.html
@@ -1,9 +1,17 @@
 <html>
   <head>
     <title>NowPostedforMe</title>
+    <style>@import url('https://fonts.googleapis.com/css?family=Roboto');</style>
+    <link rel="stylesheet" type="text/css" href="style.css"
   </head>
   <body>
-    <h1>Now Posted for Me</h1>
-    <p>yay it worked.</p>
+    <div id="container">
+      <div id="masthead">
+        <h1><span style="color:#2E6EB2">Now</span><span style="color:#E5564B">Posted</span> for me</h1>
+      </div>
+      <div>
+        <p id="tagline" class="description-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
   </body>
 </html>
