--- a/static/home.html
+++ b/static/home.html
@@ -7,10 +7,15 @@
   <body>
     <div id="container">
       <div id="masthead">
-        <h1><span style="color:#2E6EB2">Now</span><span style="color:#E5564B">Posted</span> for me</h1>
+        <h1><span style="color:#E5564B">Now</span><span style="color:#2E6EB2">Posted</span> for me</h1>
       </div>
-      <div>
-        <p id="tagline" class="description-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="description-text">
+        <p style="text-align:left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <form action="/" method="POST">
+            Phone Number:<input type="text" name="phone_number" />
+            <br>
+            Your Query:<input type="text" name="search_query" />
+          </form>
       </div>
     </div>
   </body>
