Rudimentary implementation of twilio integration with form post request

--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>NowPostedforMe</title>
+    <title>Thank you!</title>
     <style>@import url('https://fonts.googleapis.com/css?family=Roboto');</style>
     <style>body{
       background-color: #FCFCFC;
@@ -65,17 +65,7 @@
   <body>
     <div id="container">
       <div id="masthead">
-        <h1><span style="color:#E5564B">Now</span><span style="color:#2E6EB2">Posted</span> for me</h1>
-      </div>
-      <div class="description-text">
-        <p style="text-align:left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <form action="/" method="POST">
-            Phone Number:<input type="text" name="phone_number">
-            <br>
-            Desired Position:<input type="text" name="search_query">
-            <br>
-            <input type="submit">
-          </form>
+        <h1><span style="color:#E5564B">Thank </span><span style="color:#2E6EB2">You</span></h1>
       </div>
     </div>
   </body>
