Now returns only the jobs that appeared within the last day. Also added location into front and back end

--- a/static/home.html
+++ b/static/home.html
@@ -74,6 +74,8 @@
             <br>
             Desired Position:<input type="text" name="search_query">
             <br>
+            Desired Location (ZIP):<input type="text" name="query_location">
+            <br>
             <input type="submit">
           </form>
       </div>
