--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -10,9 +10,24 @@
       text-align:center;
     }
 
+    a, a:visited{
+       color: #2843FF;
+       cursor: pointer;
+    }
+
+    a:hover{
+      color: #FE5F00;
+    }
+
     h1{
       font-family: 'Roboto',sans-serif;
       font-size: 60px;
+      margin:0px;
+    }
+
+    h2{
+      font-family: 'Roboto',sans-serif;
+      font-size: 28px;
       margin:0px;
     }
 
@@ -20,6 +35,7 @@
       font-family: 'Roboto', sans-serif;;
       font-size: 20px;
       color: #E0E0E0;
+      margin-top: 4px;
     }
 
     input{
@@ -50,6 +66,18 @@
       margin-bottom:2%;
     }
 
+    #footer{
+      color: #E0E0E0;
+      background-color: #232F3D;
+      border-radius: 4px;
+      padding:3px;
+      text-align:right;
+      font-size:14px;
+      position:fixed;
+      bottom:-10px;
+      right:15px;
+    }
+
     .description-text{
       background-color: #232F3D;
       color: #E0E0E0;
@@ -57,7 +85,7 @@
       padding:1.5% 5% 1.5% 5%;
       display: inline-block;
       text-align:center;
-      height:60%;
+      height:30%;
       margin: 0 auto;
       width: 65%;
     }</style>
@@ -65,8 +93,12 @@
   <body>
     <div id="container">
       <div id="masthead">
-        <h1><span style="color:#E5564B">Thank </span><span style="color:#2E6EB2">You</span></h1>
+        <h1><span style="color:#E5564B">Thank You</span><span style="color:#2E6EB2"> Very Much</span></h1>
+      </div>
+      <div class="description-text">
+        <h2>You are <span style="color:#E5564B"> now</span><span style="color:#2E6EB2"> posted</span>! You should be receiving a confirmation text message shortly.</h2>
       </div>
     </div>
+    <p id="footer">Code and contact info can be found on <a href="https://github.com/bhernandez-cs/NowPosted">GitHub</a><p>
   </body>
 </html>
